# LEGACY-Open_Source-Pre2006

./: README.md  README2.md
IceWMCP/: DndCTree.py  ICEWMCP_URLRead.py  ICEWMCP_WEB_VERSION  IceMe.py  IceMenuTree.py  IceWMCPEnergyStar.py  IceWMCPGtkIconSelection.py  IceWMCPKeyboard.py  IceWMCPMouse.py  IceWMCPSystem.py  IceWMCPWallpaper.py  IceWMCPWinOptions.py  IceWMCP_GtkPCCard.py  IconSelectionDialog.py  MenuParser.py  Preferences.py  PreviewWindow.py  constants.py  icepref.py  icepref_search.py  icepref_td.py  icesound.py  icewmcp_common.py  icewmcp_dnd.py  launcher.py  phrozenclock.py  pyicewmcphw.py  pyprintcommon.py  pyspool.py  sample_theme.stheme
IceWMCP-2/: DndCTree.py  ICEWMCP_BugReport.py  IceMe.py  IceMenuTree.py  IceWMCPEnergyStar.py  IceWMCPGtkIconSelection.py  IceWMCPKeyboard.py  IceWMCPMouse.py  IceWMCPSystem.py  IceWMCPWallpaper.py  IceWMCPWinOptions.py  IceWMCP_Dialogs.py  IceWMCP_GtkPCCard.py  IconSelectionDialog.py  MenuParser.py  Preferences.py  PreviewWindow.py  constants.py  icepref.py  icepref_search.py  icepref_td.py  icesound.py  icewmcp_common.py  icewmcp_dnd.py  icewmcphw.py  launcher.py  pangoxlfd.py  phrozenclock.py  pyprintcommon.py  pyspool.py
IceWMCP-Gtk2/: ColorButton.py  DndCTree.py  ICEWMCP_BugReport.py  ICEWMCP_URLRead.py  IceMe.py  IceMenuTree.py  IceWMCP.py  IceWMCPGtkIconSelection.py  IceWMCPKeyboard.py  IceWMCPMouse.py  IceWMCPRun.py  IceWMCPWallpaper.py  IceWMCPWinOptions.py  IceWMCP_Dialogs.py  IceWMCP_GtkPCCard.py  IconSelectionDialog.py  MenuParser.py  Preferences.py  PreviewWindow.py  PyInstallShield  README.txt  constants.py  dir.xpm  es.mo  icepref.py  icepref_search.py  icepref_td.py  icesound.py  icewmcp_common.py  icewmcp_dnd.py  install-config.txt  install-pix.xpm  launcher.py  local.sed  next.xpm  notes.txt  phrozenclock.py  pyprintcommon.py  pyspool.py  sample_theme.stheme
IceWMCP-HW/: Build  Build_User  CopyOver_User  Makefile  README  hwinfo.c  hwinfo.c_backup  hwinfo.c_old  icewmcphw.h  make_dev  makeit  pyicewmcphw.i  pyicewmcphw_wrap.c
IceWMCP-TrayIcon/: IceWMCP-TrayIcon-README.txt  Makefile  configure  icewmcp-trayicon-es.mo  icewmcp-trayicon-es.po  icewmcp-trayicon-ru.mo  icewmcp-trayicon-ru.po  icewmcp-trayicon.pot  make_pot  trayicon.c  trayicons.h
ganim8/: GAnim8_Help.txt  GAnim8_Whats_New.txt  GtkSnapshot.py  GtkSnapshot_Readme.txt  LICENSE  SYSTEM_REQUIREMENTS.txt  VIDEO_SUPPORT.txt  (+5 more)
pyvoice-gyach/gyach/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  NEWS  PHROZEN_SMOKE_README.txt  README  TODO  acconfig.h  aclocal.m4  build_gyache  config.h  config.h.backup  config.h.in  config.status  configure.in  emoticons  gyache-help-short.txt  gyache-help.html  gyache-ylinks.html  mkinstalldirs  sample.gyachrc  sample.ignore.list  sample.ignore.regex
pyvoice-gyach/gyach/CVS/: Entries  Repository
pyvoice-gyach/gyach/audibles/: gyaudibles.xml
pyvoice-gyach/gyach/audibles/CVS/: Entries  Repository
pyvoice-gyach/gyach/autom4te.cache/: traces.0t
pyvoice-gyach/gyach/autom4te.cache/CVS/: Entries  Repository
pyvoice-gyach/gyach/locale/: check_pots  g_extra.pot  gyach.pot  make_pot
pyvoice-gyach/gyach/locale/CVS/: Entries  Repository
pyvoice-gyach/gyach/locale/es/: Makefile  gyach.po
pyvoice-gyach/gyach/locale/es/CVS/: Entries  Repository
pyvoice-gyach/gyach/locale/es/LC_MESSAGES/: gyach.mo
pyvoice-gyach/gyach/locale/es/LC_MESSAGES/CVS/: Entries  Repository
pyvoice-gyach/gyach/locale/fr/: Makefile  gyach.po
pyvoice-gyach/gyach/locale/fr/CVS/: Entries  Repository
pyvoice-gyach/gyach/locale/fr/LC_MESSAGES/: gyach.mo
pyvoice-gyach/gyach/locale/fr/LC_MESSAGES/CVS/: Entries  Repository
pyvoice-gyach/gyach/pixmaps/: bold.xpm  buddaway.xpm  buddidle.xpm  buddoffline.xpm  buddonline.xpm  chat.xpm  colors.xpm  games.xpm  gyach-icon.xpm  italic.xpm  launchcast.xpm  loglogo.xpm  mail.xpm  no_photo.xpm  pm_audible.xpm  pm_buzz.xpm  pm_close.xpm  pm_encrypt.xpm  pm_erase.xpm  pm_file.xpm  pm_ignore.xpm  pm_join.xpm  pm_profile.xpm  pm_save.xpm  pm_send.xpm  pm_tux.xpm  pm_voice.xpm  sms.xpm  status_away.xpm  status_cam.xpm  status_cam_female.xpm  status_cam_male.xpm  status_here.xpm  status_here_female.xpm  status_here_male.xpm  status_idle.xpm  status_ignore.xpm  status_mute.xpm  stealth_off.xpm  stealth_on.xpm  (+2 more)
pyvoice-gyach/gyach/pixmaps/CVS/: Entries  Repository
pyvoice-gyach/gyach/scripts/: my-gtk-config
pyvoice-gyach/gyach/scripts/CVS/: Entries  Repository
pyvoice-gyach/gyach/smileys/CVS/: Entries  Repository
pyvoice-gyach/gyach/sounds/: buddoff.raw  buddon.raw  buzz.raw  other.raw  pm.raw  reject.raw  yahoomail.raw
pyvoice-gyach/gyach/sounds/CVS/: Entries  Repository
pyvoice-gyach/gyach/src/: Makefile.am  Makefile.in  aliases.c  aliases.h  animations.c  animations.h  bootprevent.c  bootprevent.h  callbacks.c  callbacks.h  commands.c  commands.h  conference.c  conference.h  fader.c  fonts.c  fonts.h  friends.c  friends.h  gyach.c  gyach.h  gyach_int.c  gyach_int.h  gyach_int_text.c  gytreeview.c  gytreeview.h  history.c  history.h  htmlrender.c  ignore.c  ignore.h  images.c  images.h  interface.c  interface.h  main.c  main.h  md5.c  md5.h  packet_handler.c  (+40 more)
pyvoice-gyach/gyach/src/.deps/CVS/: Repository
pyvoice-gyach/gyach/src/CVS/: Entries  Repository
pyvoice-gyach/gyach/src/plugins/: Encryption_Plugins_README.txt  Makefile  PHOTOS_Plugin_README.txt  XMMS_Plugin_README.txt  gyach-blowfish.c  gyach-gpgme.c  gyach-mcrypt.c  gyach-photos.c  gyach-xmms.c
pyvoice-gyach/gyach/src/plugins/CVS/: Entries  Repository
pyvoice-gyach/gyach/src/webcam/: Makefile  Makefile.static  README.txt  gyacheupload-main.c  gyacheupload-ui.c  gyacheupload-v4l.c  gyacheupload-v4l.c.orig-1.0.6  gyacheupload.h  gyachewebcam.c  gyachewebcam.h  main.c  mkinstalldirs  pywebcam.py
pyvoice-gyach/gyach/src/webcam/CVS/: Entries  Repository
pyvoice-gyach/gyach/tuxvironments/: gytuxvironments.xml
pyvoice-gyach/gyach/tuxvironments/CVS/: Entries  Repository
(+1294 files in other folders)
